--- a/index.html
+++ b/index.html
@@ -1,73 +1,274 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WEB BASE FRONT 32</title>
 
-    <!-- Import font-family -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <!-- Import styles css -->
-    <link rel="stylesheet" href="/assets/css/main.css" />
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Project Web32</title>
+  <!-- Import font-family -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet" />
+  <!-- Import fontawesome -->
+  <link rel="stylesheet" href="./lib/fontawesome/css/fontawesome.min.css">
+  <link rel="stylesheet" href="./lib/fontawesome/css/brands.min.css">
+  <link rel="stylesheet" href="./lib/fontawesome/css/solid.min.css">
 
-  <body>
-    <!-- Header./Start -->
-    <div class="header">
-      <div class="top-bar">
-        <div class="container">
-          <div class="wrap-topbar">
-            <div class="topbar-left">
-              <a href="#">Call of Duty®: Modern Warfare® II mới ra cực hot</a>
-            </div>
-            <div class="topbar-right">
-              <ul class="list-topbar">
-                <li>
-                  <img src="./assets/images/far fa-book.svg" />
-                  <a href="#">Hướng dẫn mua hàng</a>
-                </li>
-                <li>
-                  <img src="./assets/images/far fa-badge-percent.svg" />
-                  <a href="#">Ưu đãi khách hàng</a>
-                </li>
-                <li>
-                  <img src="./assets/images/far fa-phone-alt.svg" />
-                  <a href="#">Thông tin liên hệ </a>
-                </li>
-              </ul>
-            </div>
+  <!-- Import OwlCaroulsel -->
+  <link rel="stylesheet" href="./lib/owlcarousel/assets/owl.carousel.min.css">
+  <link rel="stylesheet" href="./lib/owlcarousel/assets/owl.theme.default.min.css">
+
+  <!-- Import styles css -->
+  <link rel="stylesheet" href="/assets/css/main.css" />
+</head>
+
+
+<body>
+  <!-- Header./Start -->
+  <div class="header">
+    <div class="top-bar">
+      <div class="container">
+        <div class="wrap-topbar">
+          <div class="topbar-left">
+            <a href="#">Call of Duty®: Modern Warfare® II mới ra cực hot</a>
+          </div>
+          <div class="topbar-right">
+            <ul class="list-topbar">
+              <li>
+                <img src="./assets/images/far fa-book.svg" />
+                <a href="#">Hướng dẫn mua hàng</a>
+              </li>
+              <li>
+                <img src="./assets/images/far fa-badge-percent.svg" />
+                <a href="#">Ưu đãi khách hàng</a>
+              </li>
+              <li>
+                <img src="./assets/images/far fa-phone-alt.svg" />
+                <a href="#">Thông tin liên hệ </a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
-
-      <div class="header-main">
-        <div class="container">
-          <div class="wrap-header-main">
-            <div class="header-main-top">
-
-            </div>
-            <div class="header-main-bottom">
-
-            </div>
-          </div>
-        </div>
-      </div>
-
-
-
-      <div class="header-bottom">header-bottom</div>
     </div>
+  </div>
 
-    <!-- Main./Start -->
-    <div class="main"></div>
+  <div class="header-main">
+    <div class="container">
+      <div class="header-main-top">
+        <ul class="content-main-top">
+          <li>
+            <a class="logo" href="/">
+              <img src="/assets/images/b1402e84a947ed36cebe9799e47f61c2.svg" alt="logo">
+              <h4>Divine Shop</h4>
+            </a>
+          </li>
+          <li>
+            <div class="search">
+              <input type="text" placeholder="Tìm kiếm sản phẩm" />
+              <button>
+                <i class="fa-regular fa-magnifying-glass"></i>
+              </button>
+            </div>
+          </li>
+          <li>
+            <div class="user">
+              <button>
+                <i class="fa-solid fa-user"></i>
+              </button>
+              <p>Đăng nhập<span>/</span>Đăng ký</p>
+            </div>
+          </li>
+          <li>
+            <a href="#" class="cart">
+              <i class="fa-regular fa-cart-shopping"></i>
+              <p>Giỏ hàng<span>0</span></p>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="header-main-bottom"></div>
 
-    <!-- Footer./Start -->
-    <div class="footer"></div>
-  </body>
+    </div>
+  </div>
+
+  <div class="header-bottom">
+    <div class="container">
+      <div class="wrap-header-bottom">
+        <div class="header-bottom-left">
+
+        </div>
+        <div class="header-bottom-right">
+
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+
+  <!-- Main./Start -->
+  <div class="main">
+    <div class="container">
+      <div class="top-seller">
+
+        <div class="row">
+          <div class="col">
+            <ul class="menu-main">
+              <li>
+                 <a href="#">
+                  <img src="https://cdn.divineshop.vn/image/catalog/Anh/Icon%20svg/giaitri-25627.svg?hash=1640449820" alt="Giải trí">
+                  Giải trí
+
+                  <ul class="sub-menu-c1">
+                      <li>
+                        <a href="#">
+                          Item 1
+                        </a>
+
+                        <ul class="sub-menu-c2">
+                          <li>
+                            <a href="#">
+                              Item 1.1
+                            </a>
+                          </li>
+                        </ul>
+                      </li>
+                  </ul>
+                 </a>
+              </li>
+              <li>
+                 <a href="#">
+                 <img src="https://cdn.divineshop.vn/image/catalog/Anh/Icon%20svg/lamviec-71000.svg?hash=1640449820" alt="làm việc">
+                 Làm việc
+                 </a>
+             </li>
+             <li>
+               <a href="#">
+               <img src="https://cdn.divineshop.vn/image/catalog/Anh/Icon%20svg/hoctap-68990.svg?hash=1640449820" alt="Học tập">
+               Học tập
+               </a>
+           </li>
+           <li>
+            <a href="#">
+             <img src="https://cdn.divineshop.vn/image/catalog/Banner/Icon/Steam-66507.svg?hash=1640449899" alt="game steam">
+             Game Steam
+            </a>
+         </li>
+         <li>
+          <a href="#">
+           <img src="https://cdn.divineshop.vn/image/catalog/Banner/Icon/Logo%20Origin-26150.svg?hash=1640449899" alt="game origin">
+           Game Origin
+          </a>
+         </li>
+         <li>
+          <a href="#">
+           <img src="https://cdn.divineshop.vn/image/catalog/Banner/Icon/roblox2-83248.svg?hash=1649948527" alt="window, office">
+           Window, Office
+          </a>
+         </li>
+         <li>
+          <a href="#">
+            <img src="https://cdn.divineshop.vn/image/catalog/Banner/Icon/Xbox%20Logo-88261.svg?hash=1640449899" alt="google drive">
+            Google Drive
+          </a>
+         </li>
+         <li>
+          <a href="#">
+            <img src="https://cdn.divineshop.vn/image/catalog/Banner/Icon/Steam%20Wallet-41454.svg?hash=1640449899" alt="Steam wallet">
+            Steam wallet
+          </a>
+         </li>
+         <li>
+          <a href="#">
+            <img src="https://cdn.divineshop.vn/image/catalog/Banner/Icon/Signal-61321.svg?hash=1640449899" alt="gói data mobile">
+            Gói Data Mobile
+          </a>
+         </li>
+         <li>
+          <a href="#">
+            <img src="https://cdn.divineshop.vn/image/catalog/Banner/Icon/Google%20Play-42608.svg?hash=1640449899" alt="Google play, itunes">
+            Google Play, ITunes
+          </a>
+         </li>
+            </ul>
+            </div>
+          </div>
+
+
+
+
+          <div class="col">
+            
+
+
+            <div class="owl-carousel owl-theme">
+              <div class="item">
+                <img src="./assets/images/netflix-49596.png" alt="Netflix">
+              </div>
+              <div class="item">
+                <img src="./assets/images/tối ưu công việc-45178.png" alt="công việc">
+              </div>
+              <div class="item">
+                <img src="./assets/images/Divine Shop tuyển dụng-66809.png" alt="tuyển dụng">
+              </div>
+              <div class="item">
+                <img src="./assets/images/banner Google One (3)-10567.png" alt="Google One">
+              </div>
+              <div class="item">
+                <img src="./assets/images/AutoDesk Main banner-89472.png" alt="autodesk">
+              </div>
+              <div class="item">
+                <img src="./assets/images/AzireVPN-32034.jpg" alt="Azire VPN">
+              </div>
+              <div class="item"><h4>7</h4></div>
+              <div class="item"><h4>8</h4></div>
+              <div class="item"><h4>9</h4></div>
+              <div class="item"><h4>10</h4></div>
+              <div class="item"><h4>11</h4></div>
+              <div class="item"><h4>12</h4></div>
+          </div>
+
+
+            </div>
+          </div>
+          <div class="col violet">
+            <div class="content-3">
+
+            </div>
+          </div>
+        </div>
+        
+
+
+
+
+
+
+
+
+
+
+        <div class="row">
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Footer./Start -->
+  <div class="footer"></div>
+
+
+
+
+  <!--Import lib Jquery-->
+  <script src="./lib/jquery.min.js"></script>
+  <!--Import thư viện Owlcarouel-->
+  <script src="./lib/owlcarousel/owl.carousel.min.js"></script>
+  <!--Import file main.js-->
+  <script src="./assets/js/main.js"></script>
+</body>
 </html>
