--- a/index.html
+++ b/index.html
@@ -118,129 +118,158 @@
           <div class="col">
             <ul class="menu-main">
               <li>
-                 <a href="#">
-                  <img src="https://cdn.divineshop.vn/image/catalog/Anh/Icon%20svg/giaitri-25627.svg?hash=1640449820" alt="Giải trí">
+                <a href="#">
+                  <img src="./assets/images/giaitri-25627.svg" alt="Gia tri">
                   Giải trí
-
-                  <ul class="sub-menu-c1">
+                </a>
+                <ul class="sub-menu-c1">
+                  <li>
+                    <a href="#">
+                      Item 1
+                    </a>
+                    <ul class="sub-menu-c2">
                       <li>
                         <a href="#">
-                          Item 1
+                          Item 1.1
                         </a>
-
-                        <ul class="sub-menu-c2">
-                          <li>
-                            <a href="#">
-                              Item 1.1
-                            </a>
-                          </li>
-                        </ul>
                       </li>
-                  </ul>
-                 </a>
+                    </ul>
+                  </li>
+                </ul>
               </li>
               <li>
-                 <a href="#">
-                 <img src="https://cdn.divineshop.vn/image/catalog/Anh/Icon%20svg/lamviec-71000.svg?hash=1640449820" alt="làm việc">
-                 Làm việc
-                 </a>
-             </li>
-             <li>
-               <a href="#">
-               <img src="https://cdn.divineshop.vn/image/catalog/Anh/Icon%20svg/hoctap-68990.svg?hash=1640449820" alt="Học tập">
-               Học tập
-               </a>
-           </li>
-           <li>
-            <a href="#">
-             <img src="https://cdn.divineshop.vn/image/catalog/Banner/Icon/Steam-66507.svg?hash=1640449899" alt="game steam">
-             Game Steam
-            </a>
-         </li>
-         <li>
-          <a href="#">
-           <img src="https://cdn.divineshop.vn/image/catalog/Banner/Icon/Logo%20Origin-26150.svg?hash=1640449899" alt="game origin">
-           Game Origin
-          </a>
-         </li>
-         <li>
-          <a href="#">
-           <img src="https://cdn.divineshop.vn/image/catalog/Banner/Icon/roblox2-83248.svg?hash=1649948527" alt="window, office">
-           Window, Office
-          </a>
-         </li>
-         <li>
-          <a href="#">
-            <img src="https://cdn.divineshop.vn/image/catalog/Banner/Icon/Xbox%20Logo-88261.svg?hash=1640449899" alt="google drive">
-            Google Drive
-          </a>
-         </li>
-         <li>
-          <a href="#">
-            <img src="https://cdn.divineshop.vn/image/catalog/Banner/Icon/Steam%20Wallet-41454.svg?hash=1640449899" alt="Steam wallet">
-            Steam wallet
-          </a>
-         </li>
-         <li>
-          <a href="#">
-            <img src="https://cdn.divineshop.vn/image/catalog/Banner/Icon/Signal-61321.svg?hash=1640449899" alt="gói data mobile">
-            Gói Data Mobile
-          </a>
-         </li>
-         <li>
-          <a href="#">
-            <img src="https://cdn.divineshop.vn/image/catalog/Banner/Icon/Google%20Play-42608.svg?hash=1640449899" alt="Google play, itunes">
-            Google Play, ITunes
-          </a>
-         </li>
+                <a href="#">
+                  <img src="https://cdn.divineshop.vn/image/catalog/Anh/Icon%20svg/lamviec-71000.svg?hash=1640449820" alt="làm việc">
+                  Làm việc
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="https://cdn.divineshop.vn/image/catalog/Anh/Icon%20svg/hoctap-68990.svg?hash=1640449820" alt="Học tập">
+                  Học tập
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="https://cdn.divineshop.vn/image/catalog/Banner/Icon/Steam-66507.svg?hash=1640449899" alt="game steam">
+                  Game steam
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="https://cdn.divineshop.vn/image/catalog/Banner/Icon/Logo%20Origin-26150.svg?hash=1640449899" alt="game origin">
+                  Game Origin
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="https://cdn.divineshop.vn/image/catalog/Banner/Icon/roblox2-83248.svg?hash=1649948527" alt="window, office">
+                  Window, Office
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="https://cdn.divineshop.vn/image/catalog/Banner/Icon/Xbox%20Logo-88261.svg?hash=1640449899" alt="google drive">
+                  Google driver
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="https://cdn.divineshop.vn/image/catalog/Banner/Icon/Steam%20Wallet-41454.svg?hash=1640449899" alt="Steam wallet">
+                  Steam Wallet
+                </a>
+                <ul class="sub-menu-c1">
+                  <li>
+                    <a href="#">
+                      Item 3
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      Item 4
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      Item 5
+                    </a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="https://cdn.divineshop.vn/image/catalog/Banner/Icon/Signal-61321.svg?hash=1640449899" alt="gói data mobile">
+                  Gói data Mobile
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="https://cdn.divineshop.vn/image/catalog/Banner/Icon/Google%20Play-42608.svg?hash=1640449899" alt="Google play, itunes">
+                  Google Play, iTunes
+                </a>
+              </li>
             </ul>
-            </div>
-          </div>
 
+          </div>
 
 
 
           <div class="col">
-            
-
-
-            <div class="owl-carousel owl-theme">
-              <div class="item">
-                <img src="./assets/images/netflix-49596.png" alt="Netflix">
+            <!-- Slider banner -->
+            <div class="slider">
+              <div class="owl-carousel owl-theme">
+                <div class="item">
+                  <img src="/assets/images/img-1.png" />
+                </div>
+                <div class="item">
+                  <img src="./assets/images/img-2.jpg" />
+                </div>
+                <div class="item">
+                  <img src="./assets/images/img-3.png" />
+                </div>
+                <div class="item">
+                  <img src="./assets/images/img-4.png" />
+                </div>
               </div>
-              <div class="item">
-                <img src="./assets/images/tối ưu công việc-45178.png" alt="công việc">
-              </div>
-              <div class="item">
-                <img src="./assets/images/Divine Shop tuyển dụng-66809.png" alt="tuyển dụng">
-              </div>
-              <div class="item">
-                <img src="./assets/images/banner Google One (3)-10567.png" alt="Google One">
-              </div>
-              <div class="item">
-                <img src="./assets/images/AutoDesk Main banner-89472.png" alt="autodesk">
-              </div>
-              <div class="item">
-                <img src="./assets/images/AzireVPN-32034.jpg" alt="Azire VPN">
-              </div>
-              <div class="item"><h4>7</h4></div>
-              <div class="item"><h4>8</h4></div>
-              <div class="item"><h4>9</h4></div>
-              <div class="item"><h4>10</h4></div>
-              <div class="item"><h4>11</h4></div>
-              <div class="item"><h4>12</h4></div>
-          </div>
-
-
             </div>
+
+
           </div>
+
+
+
+
+
           <div class="col violet">
             <div class="content-3">
 
             </div>
           </div>
         </div>
-        
+
+
+        <div class="row">
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Footer./Start -->
+  <div class="footer"></div>
+
+
+  <!-- Import Thu vien Jquery -->
+  <script src="./lib/jquery.min.js"></script>
+
+  <!-- Import JS Thu vien OwlCarouel -->
+  <script src="./lib/owlcarousel/owl.carousel.min.js"></script>
+
+  <!-- Import File Main JS -->
+  <script src="./assets/js/main.js"></script>
+</body>
+
+</html>
 
 
 
